--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Success</title>
 </head>
 <body>
-
+<h2>Your blog post was successfully saved to database</h2>
+<a href="http://localhost:8080">Click here to get back to your post</a>
 </body>
 </html>
